modules/bottombar.css
/* === BOTTOMBAR === */

/* bottombar */
/* #zen-appcontent-navbar-wrapper{
  margin-right: 10px !important;
  margin-left: 10px !important;
} */

#zen-appcontent-navbar-container {
  border: 0px solid var(--na-color-border) !important;
  border-radius: 0px !important;
  border-color: var(--na-color-border) !important;
  margin-left: 0px !important;
  margin-right: 10px !important;
  padding-inline: 10px !important;
  transition: padding-inline 0.3s normal;
  order: 1 !important;
}

/* hide bottombar elements */
@media not (-moz-pref("zen.view.use-single-toolbar")) {
  @media (-moz-pref("wireframe.toolbar.hide")) {
    #zen-appcontent-navbar-container #identity-box,
    #zen-appcontent-navbar-container #page-action-buttons,
    #zen-appcontent-navbar-container #tracking-protection-icon-container,
    #zen-appcontent-navbar-container .toolbarbutton-1 {
      visibility: collapse !important;
    }

    /* Define the triggers that should reveal elements */
    :root:not(:has(.tabbrowser-tab[selected][busy])):is(
      :has(#customization-content-container:hover),
      :has(toolbarpaletteitem:active),
      :has(.anchor-root[open]),
      :has(.urlbar-page-action[open]),
      :has(#unified-extensions-button[open]),
      :has(#zen-appcontent-navbar-container:hover),
      :has(#zen-appcontent-navbar-container[has-popup-menu]),
      :has(panelmultiview > .panel-viewcontainer[panelopen="true"]) /* <<< FIX */
    ) {
      #zen-appcontent-navbar-container {
        padding-inline: 0px !important;
      }

      #zen-appcontent-navbar-container #identity-box,
      #zen-appcontent-navbar-container #page-action-buttons,
      #zen-appcontent-navbar-container #tracking-protection-icon-container,
      #zen-appcontent-navbar-container .toolbarbutton-1 {
        visibility: visible !important;
      }
    }
  }
}


/* bottombar background transparent for expanded urlbar */
.urlbar-background,
#urlbar-container {
  background-color: var(--na-color-zero) !important;
}

#urlbar[breakout-extend] :root:has(.urlbar-page-action[open]) #urlbar-background,
#urlbar[breakout-extend] .urlbar-background,
#urlbar[breakout-extend] #urlbar-container {
  background-color: var(--zen-primary-color) !important;
  border: 2px solid var(--na-color-border) !important;
}

/* urlbar border radius */
#urlbar-background,
#urlbar {
  border-radius: var(--na-tab-border-radius) !important;
}

/* bottombar left icon padding */
:root[zen-compact-mode="false"] #urlbar-container:not(:has(#urlbar[breakout][breakout-extend])) #identity-icon-box {
  padding-inline: 6px !important;
}

:root[zen-compact-mode="true"] #urlbar-container:not(:has(#urlbar[breakout][breakout-extend])) #identity-icon-box {
  padding-inline: 4px !important;
}

/* splitter for urlbar input */
.urlbarView-body-inner {
  border-top: none !important;
  border-bottom: 1px solid var(--na-color-border) !important;
}

/* urlbar loading text */
#urlbar>.urlbar-input-container>.urlbar-input-box::before {
  content: "Loading" !important;
  padding-inline: 10px !important;
  animation: slideUpAdressBar var(--na-anim-duration) ease;
  animation-play-state: paused;
  transition: opacity 0.6s;
  align-self: center;
  visibility: collapse !important;
  opacity: 0;
}

#urlbar:not([breakout-extend]) .urlbar-input-container>.urlbar-input-box>input {
  opacity: 1 !important;
  transition: opacity 0.6s;
}

#main-window:has(.tabbrowser-tab[selected][busy]) #urlbar:not([breakout-extend]) .urlbar-input-container>.urlbar-input-box>input {
  transition: opacity 3s ease;
  opacity: 0 !important;
}

#main-window:has(.tabbrowser-tab[selected][busy]) #urlbar:not([breakout-extend]) .urlbar-input-container>.urlbar-input-box::before {
  animation-play-state: running;
  visibility: visible !important;
  opacity: 1;
}

/* urlbar loading */
#urlbar {
  color: var(--na-color-text) !important;
}

#urlbar .urlbar-input-container::before {
  content: "";
  position: absolute;
  inset: 0;
  background: linear-gradient(90deg, transparent, var(--na-color-border));
  border-radius: var(--na-tab-border-radius) !important;
  background-size: 200% 100%;
  animation: urlbar-loading 1s linear reverse infinite;
  animation-play-state: paused;
  opacity: 0;
  transition: opacity 0.3s;
  z-index: -1;
}

#main-window:has(.tabbrowser-tab[selected][busy]) .urlbar-input-container::before {
  animation-play-state: running;
  opacity: 1;
}

.tabbrowser-tab[busy] #urlbar {
  animation: slideUpAdressBar var(--na-anim-duration) ease;
}

/*   #zen-appcontent-navbar-wrapper{
    display: none !important;
  } */
}

/* URL bar position preference - TOP */
@media (-moz-bool-pref: "wireframe.urlbar.position.top") {
  #zen-appcontent-wrapper {
    flex-direction: column;
  }
}

/* URL bar position preference - BOTTOM (default) */
@media not (-moz-bool-pref: "wireframe.urlbar.position.top") {
  #zen-appcontent-wrapper {
    flex-direction: column-reverse;
  }

  :root[zen-right-side="true"]:not([zen-compact-mode="true"]):not([inDOMFullscreen="true"]) #zen-tabbox-wrapper {
    margin-top: var(--na-window-margin) !important;
    margin-left: var(--na-window-margin) !important;
    margin-right: 0 !important;
    margin-bottom: 0 !important;
  }

  :root:not([zen-right-side="true"]):not([zen-compact-mode="true"]):not([inDOMFullscreen="true"]) #zen-tabbox-wrapper {
    margin-top: var(--na-window-margin) !important;
    margin-left: 0 !important;
    margin-right: var(--na-window-margin) !important;
    margin-bottom: 0 !important;
  }
}

.tab-stack {
  box-shadow: none !important;
  box-sizing: none !important;
  padding: 0px !important;
  margin: 0px !important;
  border: 0px !important;
}

/* urlbar action button */
.urlbar-page-action,
#tracking-protection-icon-container {
  margin-left: 10px !important;
}

#page-action-buttons {
  margin-right: 3.5px !important;
}

